# dntc

./: .gitignore  CLAUDE.md  Dntc.sln  LICENSE  README.md
.github/workflows/: build-verify.yml
Dntc/: AssemblyQuery.cs  Dntc.csproj  Manifest.cs  Program.cs
Dntc.Attributes/: CustomDeclarationAttribute.cs  CustomFieldNameAttribute.cs  CustomFileNameAttribute.cs  CustomFunctionAttribute.cs  CustomFunctionNameAttribute.cs  CustomGlobalNameAttribute.cs  CustomNameOnTranspileAttribute.cs  Dntc.Attributes.csproj  IgnoreInHeaderAttribute.cs  InitialGlobalValueAttribute.cs  NativeFunctionCallAttribute.cs  NativeFunctionCallOnTranspileAttribute.cs  NativeGlobalAttribute.cs  NativeGlobalOnTranspileAttribute.cs  NativeTypeAttribute.cs  NonPointerStringAttribute.cs  StaticallySizedArrayAttribute.cs  WithCAttributeAttribute.cs
Dntc.Cli/: AssemblyQuery.cs  Dntc.Cli.csproj  Manifest.cs  Program.cs  Transpiler.cs
Dntc.Common/: Catalog.cs  CatalogValidator.cs  CecilUtils.cs  Dntc.Common.csproj  ExperimentalFlags.cs  ITranspilerPlugin.cs  MethodInfo.cs  StringTypes.cs  TranspilerContext.cs  TypeInfo.cs  Utils.cs  Variable.cs
Samples/: build_all.sh
Samples/Octahedron/Octahedron.Sdl/: CMakeCache.txt  CMakeLists.txt  main.c  native_test.c  native_test.h  vcpkg.json
ScratchpadCSharp.Dependency/: GenericUtils.cs  Misc.cs  ScratchpadCSharp.Dependency.csproj
ScratchpadCSharp.Plugin/: Aligned8Attribute.cs  Aligned8FieldMutator.cs  Aligned8GlobalMutator.cs  NonInitializedGlobalMutator.cs  ScratchpadCSharp.Plugin.csproj  TestPlugin.cs
TestSetups/: Class1.cs  SimpleFunctions.cs
(+277 files in other folders)
